# website

./: .eleventy.js  .envrc  .eslintrc  .gitattributes  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .releaserc  .semrelrc  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  SECURITY.md  Taskfile.yml  astro.config.ts  changelog.txt  coffee-fundraising.html.liquid  config.toml  go.mod  husky.css  index.html  jstall.css  jstall.js  mkdocs.yaml  mkdocs.yml  package-lock.json  package.json  palette.css  pyproject.toml  release.sh  tailwind.config.js
.github/workflows/: build.yml  ci.yml  codeql.yml  dependency-review.yml  deploy.yml  eslint.yml  new-ci.yml  release.yml  scan.yml
archive/: index.html  style.scss
content/posts/: my-first-post.md
docs/: theme.md
docs/biography/: education.md  experience.md  index.md  portfolio.md
docs/blog/: .authors.yml
docs/stylesheets/: theme-colors.css
docs/theme/: home.html
favicon GIMP/: bground-2-color.xcf  favicon-fullres.xcf
img/: bground-2-color.xcf
old-src/biography/: experience.md
old-src/blog/: .meta.yml
old-src/theme/: home.css  home.html
portfolio/reactrgb/: package-lock.json  package.json
portfolio/rgbGuess/: rgbGuess.html
portfolio/soundProj/: sound.css  sound.html
public/: index.html
site/: 404.html  index.html  sitemap.xml  zigzag.css
site/biography/: index.html
site/blog/: index.html
site/portfolio/: index.html
src/: App.js  index.js  index.njk
src/_data/: author.json
src/_layouts/: base.njk
src/biography/: education.md  experience.md  index.md  portfolio.md
src/blog/: index.md
src/components/: AnimatedLink.js  AnimatedLinkLight.js  Container.js  EducationItem.js  ExperienceItem.js  FluidContainer.js  GradientButton.js  HoverCard.js  HoverDiv.js  JustifiedRow.js  MainTitle.js  Navbar.js  NavbarMobile.js  PageContainer.js  PageTitle.js  PortfolioItem.js  Row.js  (+3 more)
(+53 files in other folders)
