[tool.poetry]
name = "src"
version = "0.0.0"
description = "Justen Stall's portfolio and blog."
authors = ["Justen Stall <justenstall@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5.3"
mkdocs-material = {extras = ["imaging"], version = "^9.5.6"}
pygments = "^2.17.2"
mdx-truly-sane-lists = "^1.3"
mkdocs-minify-plugin = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
