[project]
name = "src"
version = "0.0.0"
description = "Justen Stall's portfolio and blog."
readme = "README.md"
authors = [{ name = "Justen Stall", email = "justenstall@gmail.com" }]
maintainers = [{ name = "Justen Stall", email = "justenstall@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
	"mkdocs>=1.5.3",
	"mkdocs-material[imaging]>=9.5.18",
	"pygments>=2.18.0",
	"mdx-truly-sane-lists>=1.3",
	"mkdocs-minify-plugin>=0.8.0",
]

[project.urls]
Homepage = "https://justenstall.com"
Repository = "https://github.com/justenstall/website.git"
Issues = "https://github.com/justenstall/website/issues"
Changelog = "https://github.com/justenstall/website/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>[^']+)"

[tool.uv]
managed = true
